# craftuino

./: .gitignore  CMakeLists.txt  DOCS-de.md  DOCS-en.md  README.txt  build.bat  config.ini  config.ini.linux  installArduinoCLI.bat  setup.bat  setup.sh
configs/: config.ini.win.esp32  config.ini.win.uno
ext-api/: CMakeLists.txt
ext-api/include/: Command.h  ExtensionAPI.h  Program.h  Utils.h
ext-api/src/: Utils.cpp
extensions/arduino/: CMakeLists.txt  ext.def
extensions/arduino/include/: DelayCmd.h  ExecuteCmd.h  FunctionCmd.h  GVarCmd.h  GetPinCmd.h  PinModeCmd.h  SerialCmd.h  SetCmd.h  SetPinCmd.h  VarCmd.h
extensions/arduino/src/: DelayCmd.cpp  ExecuteCmd.cpp  ExtMain.cpp  FunctionCmd.cpp  GVarCmd.cpp  GetPinCmd.cpp  PinModeCmd.cpp  SerialCmd.cpp  SetCmd.cpp  SetPinCmd.cpp  VarCmd.cpp
include/: Config.h  Generator.h  Program.h  Sketch.h  Utils.h
include/command/: Command.h  CommandManager.h  Commands.h
include/command/cmds/: DelayCmd.h  ExecuteCmd.h  FunctionCmd.h  GVarCmd.h  GetPinCmd.h  PinModeCmd.h  SerialCmd.h  SetCmd.h  SetPinCmd.h  VarCmd.h
include/extension/: Extension.h  ExtensionAPIImpl.h
src/: Config.cpp  Generator.cpp  Main.cpp  Sketch.cpp  Utils.cpp
src/command/: Command.cpp  CommandManager.cpp
src/command/cmds/: DelayCmd.cpp  ExecuteCmd.cpp  FunctionCmd.cpp  GVarCmd.cpp  GetPinCmd.cpp  PinModeCmd.cpp  SerialCmd.cpp  SetCmd.cpp  SetPinCmd.cpp  VarCmd.cpp
src/extension/: Extension.cpp  ExtensionAPIImpl.cpp
